# climate-plus

./: .gitignore  LICENSE  README.md  config-template.ini  demo.py  pyproject.toml
chitchat_wip/: prompts.py  tcfd_preparer.py  tcfd_uploader.py  utils.py
data/: tcfd.csv  tcfd_output.csv  tcfd_term_detected.csv  tcfd_term_merged.csv
minipackage/: README.md  factcheck.py  setup.py  tcfd_classify.py
minipackage/tests/: test_factcheck.py  test_tcfd.py
trainer/: factchecking_test.ipynb  factchecking_test.py  factchecking_trainer.ipynb  factchecking_trainer.py  tcfd_11_trainer.py  tcfd_5_trainer.py  tcfd_trainer.ipynb  tcfd_trainer2.ipynb
utils/: climate_fever_uploader.py  parse_pdf.ipynb  pdf_parser.ipynb  tcfd_scraper.py  term_detector.ipynb
