[tool.poetry]
name = "climate-plus"
version = "0.1.0"
description = ""
authors = ["Ruì Qiū <rexarski@gmail.com>"]
readme = "README.md"
packages = [{include = "climate_plus"}]

[tool.poetry.dependencies]
python = "^3.9"
bs4 = "^0.0.1"
black = "^23.1.0"
requests = "^2.28.2"
pandas = "^1.5.3"
selenium = "^4.8.2"
tqdm = "^4.65.0"
thefuzz = "^0.19.0"
openai = "^0.27.4"
langchain = "^0.0.136"
faiss-cpu = "^1.7.3"
pypdf = "^3.7.1"
pycryptodome = "^3.17"
datasets = "^2.11.0"
torch = "^2.0.0"
transformers = "^4.28.1"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.21.3"
black = "^23.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
